Update cit hw 2.css

--- a/main/cit hw 2.css
+++ b/main/cit hw 2.css
@@ -1,5 +1,6 @@
 body {
     background: linear-gradient(to right, rgb(72, 107, 98), rgb(34, 223, 197));
+    width: 1140px;
 }
 .mainfloor {
     color: rgb(128, 80, 218);
