--- a/main/cit hw 2.css
+++ b/main/cit hw 2.css
@@ -1,17 +1,22 @@
 body {
+    background: linear-gradient(to right, rgb(214, 149, 149), rgb(231, 194, 114));
+    margin: 0;
+}
+.container1 {
+    width: 1350px;
+    margin: 0 auto;
     background: linear-gradient(to right, rgb(72, 107, 98), rgb(34, 223, 197));
-    width: 1140px;
 }
 .mainfloor {
     color: rgb(128, 80, 218);
     opacity: 0.5;
-    position: fixed;
+    position: relative;
     pointer-events: none;
-    z-index: -1;
+    padding-bottom: 555px;
 }
 .anime {
     animation: anime 5s infinite linear;
-    position: fixed;
+    position: absolute;
     top:50%;
     left:37%;
     transform: translate(-50%, -100%);
@@ -19,7 +24,7 @@ body {
 }
 .fan {
     animation: fan 5s infinite linear;
-    position: fixed;
+    position: absolute;
     top:50%;
     left:50%;
     transform: translate(-50%, -100%);
@@ -27,7 +32,7 @@ body {
 }
 .zone {
     animation: zone 5s infinite linear;
-    position: fixed;
+    position: absolute;
     top:50%;
     left:61%;
     transform: translate(-50%, -100%);
@@ -35,7 +40,7 @@ body {
 }
 @keyframes anime {
     0% { top: 50%; left: 35%;}
-    16% { top: 3%; left: 15%; color: black;}
+    16% { top: -9%; left: 15%; color: black;}
     17% {color: white;}
     32% {top: 20%; left: 8%;color: white;}
     33% {color: blue;}
@@ -47,7 +52,7 @@ body {
 }
 @keyframes fan {
     0% { top: 50%; left: 50%;}
-    20% {top: 3.5%; left: 50%;}
+    20% {top: -9%; left: 50%;}
     40% {top: 94%; left: 50%;}
     60% { top: 50%; left: 50%;}
     80% {font-size: 110px;}
@@ -59,15 +64,20 @@ body {
     17% {color: white;}
     32% {top: 80%; left: 93.5%; color: white;}
     33% {color: blue;}
-    48% {top: 3%; left: 80%; color: blue;}
+    48% {top: -9%; left: 80%; color: blue;}
     49% {color: black;}
     64% { top: 50%; left: 63%;}
     80% {left:70%; font-size: 110px;}
     100% {font-size: 70px;}
 }
+.container {
+    width: 1350px;
+    margin: 0 auto;
+    background: linear-gradient(to right, rgb(72, 107, 98), rgb(34, 223, 197));
+}
 .navigator {
     display: flex;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
@@ -131,42 +141,50 @@ body {
 .options4:hover{
     font-size: 23px;
 }
+.container3 {
+    width: 1350px;
+    margin: 0 auto ;
+    position: relative;
+}
 .scroll {
-    font-size: 40px;
     position: absolute;
-    top: 75%;
+    font-size: 40px;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -400%);
+}
+.container4 {
+    width: 1350px;
+    margin: 0 auto;
+    position: relative;
 }
 .down {
-    font-size: 20px;
+    font-size: 50px;
     position: absolute;
-    top: 80%;
+    top: 0%;
     left: 50%;
-    transform: translateX(-50%) scale(1);
+    transform: translate(-50%, -150px) scale(1);
     transform-origin: center center;
     color: rgb(255, 115, 0);
     animation: down 2s infinite linear;
 }
 @keyframes down {
-    0%   { transform: translateX(-50%) scale(1);   color: rgb(255, 115, 0); }
-    20%  { transform: translateX(-50%) scale(1.4); color: rgb(0, 140, 255); }
-    40%  { transform: translateX(-50%) scale(1.8); color: rgb(255, 0, 0); }
-    60%  { transform: translateX(-50%) scale(1.4); color: rgb(255, 238, 0); }
-    80%  { transform: translateX(-50%) scale(1);   color: rgb(255, 115, 0); }
+    0%   { transform: translate(-50%, -150px) scale(1);   color: rgb(255, 115, 0); }
+    20%  { transform: translate(-50%, -150px) scale(1.4); color: rgb(0, 140, 255); }
+    40%  { transform: translate(-50%, -150px) scale(1.8); color: rgb(255, 0, 0); }
+    60%  { transform: translate(-50%, -150px) scale(1.4); color: rgb(255, 238, 0); }
+    80%  { transform: translate(-50%, -150px) scale(1);   color: rgb(255, 115, 0); }
 }
-.posters {
-    display: flex;
+.container2 {
+    width: 1350px;
+    margin: -153px auto;
+    background: linear-gradient(to top, black, rgb(255, 0, 0)) ;
     position: relative;
-    margin-top: 500px;
-    margin-bottom: 100px;
-    height: 50vh;
-    width: 1340px;
+    padding: 150px 0;
 }
-
 #goku {
     width: 150px;
     left: 4%;
+    top: 0;
     position: absolute;
     transition: .3s;
 }
@@ -178,7 +196,7 @@ body {
     width: 250px;
     position: absolute;
     left: 25%;
-    top: -3%;
+    top: 0%;
     transition: .3s;
 }
 #demon:hover {
@@ -189,6 +207,7 @@ body {
     width: 180px;
     position: absolute;
     left: 55%;
+    top: 0;
     transition: .3s;
 }
 #naruto:hover {
@@ -199,6 +218,7 @@ body {
     width: 230px;
     position: absolute;
     left: 80%;
+    top: 0;
     transition: .3s;
 }
 #pokemon:hover {
@@ -223,25 +243,25 @@ button:active {
     color: rgb(101, 213, 221);
 }
 #dz {
-    top: 80%;
+    top: 85%;
     left: 4%;
     padding: 0px 20px;
     position: absolute;
 }
 #ds {
-    top: 80%;
+    top: 85%;
     left: 29%;
     padding: 0px 20px;
     position: absolute;
 }
 #nr {
-    top: 80%;
+    top: 85%;
     left: 58%;
     padding: 0px 20px;
     position: absolute;
 }
 #pk {
-    top: 80%;
+    top: 85%;
     left: 86%;
     padding: 0px 20px;
     position: absolute;
