--- a/main/cit hw 2.css
+++ b/main/cit hw 2.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
 }
 .container1 {
-    width: 1350px;
+    max-width: 1350px;
+    width: 100%;
     margin: 0 auto;
     background: linear-gradient(to right, rgb(72, 107, 98), rgb(34, 223, 197));
 }
@@ -71,7 +72,8 @@ body {
     100% {font-size: 70px;}
 }
 .container {
-    width: 1350px;
+    max-width: 1350px;
+    width: 100%;
     margin: 0 auto;
     background: linear-gradient(to right, rgb(72, 107, 98), rgb(34, 223, 197));
 }
@@ -142,7 +144,8 @@ body {
     font-size: 23px;
 }
 .container3 {
-    width: 1350px;
+    max-width: 1350px;
+    width: 100%;
     margin: 0 auto ;
     position: relative;
 }
@@ -153,7 +156,8 @@ body {
     transform: translate(-50%, -400%);
 }
 .container4 {
-    width: 1350px;
+    max-width: 1350px;
+    width: 100%;
     margin: 0 auto;
     position: relative;
 }
@@ -175,7 +179,8 @@ body {
     80%  { transform: translate(-50%, -150px) scale(1);   color: rgb(255, 115, 0); }
 }
 .container2 {
-    width: 1350px;
+    max-width: 1350px;
+    width: 100%;
     margin: -153px auto;
     background: linear-gradient(to top, black, rgb(255, 0, 0)) ;
     position: relative;
