Update cit hw 2.css

--- a/main/cit hw 2.css
+++ b/main/cit hw 2.css
@@ -1,6 +1,6 @@
 @media (max-width: 480px) {
     body {
-        font-size: 12px;  /* Even smaller font size for mobile screens */
+        font-size: 12px;
     }
 }
 body {
