inserted an icon

--- a/main/cit hw 2.css
+++ b/main/cit hw 2.css
@@ -1,6 +1,10 @@
 body {
     background: linear-gradient(to right, rgb(214, 149, 149), rgb(231, 194, 114));
     margin: 0;
+    position: relative;
+    max-width: 1350px;
+    width: 100%;
+    margin: 0 auto;
 }
 .container1 {
     max-width: 1350px;
@@ -270,4 +274,17 @@ button:active {
     left: 86%;
     padding: 0px 20px;
     position: absolute;
+}
+.reload a img{
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    top: 90%;
+    right: 1%;
+    transition: .4s;
+}
+.reload a img:hover {
+    width: 65px;
+    height: 65px;
+    transform: translate(10%, -5%);
 }
